--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
   <div *ngIf="spinner != false" id="overlaySpinner" class="position-relative ">
 
     <div id="popupSpinner" class=" ">
-      <img class="d-flex flex-column position-absolute top-0 start-0 " src="assets/img/LOGO_sans_hallo.png" alt="logo">
+      
       <div class="d-flex flex-column position-absolute top-50 start-50 translate-middle-y">
 
         <div class="spinner-border " role="status">
@@ -15,24 +15,7 @@
     </div>
   </div>
 
-  <div *ngIf="spinner != false" id="overlaySpinner" class="overlay ">
-
-
-
-
-    <div id="overlaySpinner" class=" ">
-
-      <div id="popupSpinner" class=" ">
-        <div class="d-flex fs-1">
-          <div class="spinner-border  spinner-grow " role="status">
-            <span class="visually-hidden ">Loading...</span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-  </div>
+  
 
 
 
@@ -40,20 +23,20 @@
 
 
     <!--NAVBAR -->
-    <nav class="fixed-sm-top  rounded-end" id="home_navbar">
+    <nav class="fixed-sm-top " id="home_navbar">
 
 
      
 
-      <img class="nav-link active" src="assets/img/LOGO_sans_hallo.png" alt="logo">
+      <img class="nav-link active" src="assets/img/LOGO_sans_hallo.png" id="nav_img1" alt="logo">
       <img class="nav-link" src="assets/img/3.png" alt="tuto app1">
       <img class="nav-link" src="assets/img/photo.png" alt="tuto app2">
-      <img class="nav-link" src="assets/img/maplogo.png" alt="tuto app3">
+      <img class="nav-link" src="assets/img/maplogo.png" id="nav_img4" alt="tuto app3">
     </nav>
 
 
 
-    <section id="home_brand_info " class="text-center ms-5 container-fluid overflow-auto">
+    <section id="home_brand_info " class="text-center container-fluid overflow-auto">
       <!--BRAND INFO -->
 
       <ng-container>
@@ -79,9 +62,8 @@
 
           <!-- <button (click)="checkDataLength(bio)">bio</button> -->
           <div>
-            <app-readmore [isReadMore]="isReadMore">
-              <h2 id="bio" class="gris Caveat fs-4 mb-0 mx-5 text-uppercase fw-bold">{{bio}}</h2>
-            </app-readmore>
+            <h2 id="bio" class="gris Caveat fs-4 mb-0 mx-5 text-uppercase fw-bold">{{bio}}</h2>
+           
           </div>
 
         </div>
@@ -132,31 +114,32 @@
                 </div>
                 <button class="carousel-control-prev  p-3 mb-5" type="button" data-bs-target="#carouselExampleControls"
                   data-bs-slide="prev">
-                   <span class="carousel-control-prev-icon  position-absolute bottom-0 end-0 mx-2 p-3 "
-                    aria-hidden="true"></span>
+                   <span class="display-1 orange position-absolute bottom-0 end-0 mx-2 p-3 "
+                    aria-hidden="true"> &lsaquo; </span>
                   <span class="visually-hidden ">Previous</span> 
                 </button>
                 <button class=" carousel-control-next orange p-3 mb-5" type="button" data-bs-target="#carouselExampleControls"
                   data-bs-slide="next">
-                   <span class="carousel-control-next-icon  position-absolute bottom-0 start-0 mx-2 p-3"
-                    aria-hidden="true"></span>
+                   <span class="display-1  position-absolute bottom-0 start-0 mx-2 p-3"
+                    aria-hidden="true">&rsaquo;</span>
                   <span class="visually-hidden">Next</span> 
                 </button>
               </div>
+<!--               carousel-control-prev-icon
+ -->              <!-- carousel-control-next-icon -->
 
               <article id="article_popup" class="container-fluid d-flex justify-content-center text-start flex-column">
 
                 <h2 class="popup_laptop popup_laptop_font"> <span  id="popup_laptop_board_info"></span></h2>
                
-                <!-- <h2 class="popup_laptop bleu fw-bold popup_laptop_font">Marque <span id="popup_brand"></span></h2> -->
+                 <h2  class=" display_none_pc bleu fw-bold popup_laptop_font">Marque <span id="popup_brand"></span></h2> 
 
                 <h2 id="je_la_test" class="orange fs-2 mb-0 Caveat text-nowrap popup_laptop_font">je la teste !</h2>
                 <p id="popup_board_price"></p>
                 <p id="popup_city" class="popup_laptop popup_laptop_font text-uppercase d-flex justify-content-center flex-column fs-3  rouge">Disponible a l'essaie à
                   <span class="fw-bold">{{data.partner.city}}</span></p>
-                <button href="#" id="popup_h1"
-                class="popup_laptop_font popup_laptop mb-3 text-center rounded-3 btn btn-primary Spartan text-uppercase fst-italic text-white fs-3 mt-3 mb-3">Téléchargez
-                l'app pour tester</button> 
+                <a href="https://www.sealocker.fr"target="_blank" id="popup_h1"
+                class="popup_laptop_font popup_laptop mb-3 text-center rounded-3 btn btn-primary Spartan text-uppercase fst-italic text-white fs-3 mt-3 mb-3">En savoir +</a> 
                <!--  <p class="text-uppercase d-flex justify-content-center flex-column fs-3  rouge">Disponible a l'essaie à
                   <span class="fw-bold">{{data.partner.city}}</span></p> -->
               </article>
@@ -173,7 +156,7 @@
 
           </div>
 
-          <article  id="popup_more_info" class="text-start container-fluid  mt-4">
+          <article  id="popup_more_info" class=" p-3 text-start container-fluid  mt-4">
             <div class="row">
               <div class="col">
                 <h2 class="bleu fw-bold">Cotes<span id="popup_board_info"></span></h2>
@@ -248,7 +231,7 @@
                   class="data_image2 rounded mt-1 text_hide">
 
                 <div class="voir_div  position-absolute top-100 start-50 translate-middle">
-                  <p class="voir_p fw-bold px-1 fs-5 text-center fst-italic"> Réserver</p>
+                  <p class="voir_p fw-bold px-1 fs-5 text-center text-white fst-italic"> Réserver</p>
                 </div>
               </div>
               <div class="border-bottom">
@@ -294,12 +277,12 @@
 
 
   <!--Footer-->
-  <footer *ngIf="spinner != true" class="fixed-bottom rounded-top" id="home_footer">
-    <section id="footerSection3" class="rounded-top text-center ">
+  <footer *ngIf="spinner != true" class="fixed-bottom " id="home_footer">
+    <section id="footerSection3" class=" text-center ">
 
       <div id="footer_block" class="justify-content-between">
 
-        <div class="d-flex align-item-center p-3 flex-column">
+        <div id="footer_text" class="d-flex align-item-center p-3 flex-column">
           <p id="telecharge_app_footer" class="fst-italic fs-1 text-start mb-0 text-uppercase Caveat bleu">
             Telecharge l'app</p>
           <p class="text-nowrap mb-0 text-start"> <span id="SEALOCKER"
@@ -310,11 +293,11 @@
         <div id="app3" class="d-flex me-5 mt-2 justify-content-around ">
 
           <a href="https://apps.apple.com/fr/app/sea-locker/id1550954820"><img
-              src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-apple.png"
-              class="img-fluid p-2 border mb-5 border-3 rounded-3 bg-dark" alt="apple-logo"></a>
+              src="../assets/img/Download_on_the_App_Store_Badge_FR_RGB_blk_100517.svg"
+              class="img-fluid     rounded-3 " alt="apple-logo"></a>
           <a href="https://play.google.com/store/apps/details?id=com.sealocker&gl=FR"><img
-              src="https://popup-sealocker.herokuapp.com/assets/imgs/app-store-google.png"
-              class="img-fluid  p-2 border mb-5 border-3 rounded-3 bg-dark" alt="google-logo"></a>
+              src="../assets/img/Google_Play_Store_badge_FR.svg"
+              class="img-fluid      rounded-3 " alt="google-logo"></a>
         </div>
       </div>
     </section>
